--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <div class="media">
         <h3>Design Walkthrough Video</h3>
         <video controls class="featured-video">
-            <source src="videos/clint4.mp4" type="video/mp4">
+            <source src="videos/kolade.mp4" type="video/mp4">
             Your browser does not support the video tag.
         </video>
     </div>
