--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <nav>
         <ul>
             <li><a class="navigation" href="index.html">Home</a></li>
+            <li><a class="navigation" href="services.html">Services</a></li>
             <li><a class="navigation" href="contact-us.html">Contact Us</a></li>
             <li><a class="navigation" href="gallery.html">Gallery</a></li>
             <li><a class="navigation" href="testimonies.html">Testimonies</a></li>
