Updated all files
Index.html,Contact-us.html, services.html all updated and I remove testimonies.html and added services.html

--- a/contact-us.html
+++ b/contact-us.html
@@ -12,9 +12,9 @@
     <nav>
         <ul>
             <li><a class="navigation" href="index.html">Home</a></li>
+            <li><a class="navigation" href="services.html">Services</a></li>
             <li><a class="navigation" href="contact-us.html">Contact Us</a></li>
             <li><a class="navigation" href="gallery.html">Gallery</a></li>
-            <li><a class="navigation" href="testimonies.html">Testimonies</a></li>
         </ul>
     </nav>
 </section>
