I updated gallery.html and style.css files
Added more images and videos to both folders.
set up the first section on the pictures section on the gallery page.

--- a/gallery.html
+++ b/gallery.html
@@ -26,11 +26,75 @@
     <!-- Pictures Section -->
     <div class="gallery-section" id="pictures">
         <h3>Pictures</h3>
-        <div class="gallery-grid">
-            <img src="images/design1.jpg" alt="Design 1" class="gallery-item" data-type="image">
-            <img src="images/design2.jpg" alt="Design 2" class="gallery-item" data-type="image">
-            <img src="images/design3.jpg" alt="Design 3" class="gallery-item" data-type="image">
+         <!-- Section for Kolade -->
+    <div class="container">
+        <h2>Kolade</h2>
+        <div class="gallery">
+          <a href="#img1"><img src="images/kolade3.jpeg" alt="Kolade 1"></a>
+          <a href="#img2"><img src="images/kolade4.jpeg" alt="Kolade 2"></a>
+          <a href="#img3"><img src="images/kolade1.jpeg" alt="Kolade 3"></a>
+          <a href="#img4"><img src="images/kolade.jpeg" alt="Kolade 4"></a>
+          <a href="#img5"><img src="images/kolade2.jpeg" alt="Kolade 5"></a>
         </div>
+
+        <!-- Lightbox for Kolade -->
+    <div id="img1" class="lightbox">
+        <a href="#" class="close-btn">&times;</a>
+        <img src="images/kolade3.jpeg" alt="Kolade 1">
+      </div>
+      <div id="img2" class="lightbox">
+        <a href="#" class="close-btn">&times;</a>
+        <img src="images/kolade4.jpeg" alt="Kolade 2">
+      </div>
+      <div id="img3" class="lightbox">
+        <a href="#" class="close-btn">&times;</a>
+        <img src="images/kolade1.jpeg" alt="Kolade 3">
+      </div>
+      <div id="img4" class="lightbox">
+        <a href="#" class="close-btn">&times;</a>
+        <img src="images/kolade.jpeg" alt="Kolade 4">
+      </div>
+      <div id="img5" class="lightbox">
+        <a href="#" class="close-btn">&times;</a>
+        <img src="images/kolade2.jpeg" alt="Kolade 5">
+      </div>
+
+        <!-- Section for Carlow -->
+    <div class="section">
+        <h2>Carlow</h2>
+        <div class="gallery">
+          <img src="https://via.placeholder.com/200x150?text=Carlow+1" alt="Carlow 1">
+          <img src="https://via.placeholder.com/200x150?text=Carlow+2" alt="Carlow 2">
+          <img src="https://via.placeholder.com/200x150?text=Carlow+3" alt="Carlow 3">
+          <img src="https://via.placeholder.com/200x150?text=Carlow+4" alt="Carlow 4">
+          <img src="https://via.placeholder.com/200x150?text=Carlow+5" alt="Carlow 5">
+        </div>
+      </div>
+  
+      <!-- Section for Obi -->
+      <div class="section">
+        <h2>Obi</h2>
+        <div class="gallery">
+          <img src="https://via.placeholder.com/200x150?text=Obi+1" alt="Obi 1">
+          <img src="https://via.placeholder.com/200x150?text=Obi+2" alt="Obi 2">
+          <img src="https://via.placeholder.com/200x150?text=Obi+3" alt="Obi 3">
+          <img src="https://via.placeholder.com/200x150?text=Obi+4" alt="Obi 4">
+          <img src="https://via.placeholder.com/200x150?text=Obi+5" alt="Obi 5">
+        </div>
+      </div>
+  
+      <!-- Section for Clinton -->
+      <div class="section">
+        <h2>Clinton</h2>
+        <div class="gallery">
+          <img src="https://via.placeholder.com/200x150?text=Clinton+1" alt="Clinton 1">
+          <img src="https://via.placeholder.com/200x150?text=Clinton+2" alt="Clinton 2">
+          <img src="https://via.placeholder.com/200x150?text=Clinton+3" alt="Clinton 3">
+          <img src="https://via.placeholder.com/200x150?text=Clinton+4" alt="Clinton 4">
+          <img src="https://via.placeholder.com/200x150?text=Clinton+5" alt="Clinton 5">
+        </div>
+      </div>
+    </div>  
     </div>
 
     <!-- Videos Section -->
