--- a/gallery.html
+++ b/gallery.html
@@ -20,82 +20,70 @@
 </section>
 
 <!-- Gallery Section -->
-<section id="gallery">
-    <h2>Our Gallery</h2>
+<!-- Section for Kolade -->
+<div class="container">
+  <h2>Kolade</h2>
+  <div class="gallery">
+      <a href="#kolade-img1"><img src="images/kolade3.jpeg" alt="Kolade 1"></a>
+      <a href="#kolade-img2"><img src="images/kolade4.jpeg" alt="Kolade 2"></a>
+      <a href="#kolade-img3"><img src="images/kolade1.jpeg" alt="Kolade 3"></a>
+      <a href="#kolade-img4"><img src="images/kolade.jpeg" alt="Kolade 4"></a>
+      <a href="#kolade-img5"><img src="images/kolade2.jpeg" alt="Kolade 5"></a>
+  </div>
 
-    <!-- Pictures Section -->
-    <div class="gallery-section" id="pictures">
-        <h3>Pictures</h3>
-         <!-- Section for Kolade -->
-    <div class="container">
-        <h2>Kolade</h2>
-        <div class="gallery">
-          <a href="#img1"><img src="images/kolade3.jpeg" alt="Kolade 1"></a>
-          <a href="#img2"><img src="images/kolade4.jpeg" alt="Kolade 2"></a>
-          <a href="#img3"><img src="images/kolade1.jpeg" alt="Kolade 3"></a>
-          <a href="#img4"><img src="images/kolade.jpeg" alt="Kolade 4"></a>
-          <a href="#img5"><img src="images/kolade2.jpeg" alt="Kolade 5"></a>
-        </div>
+  <!-- Lightbox for Kolade -->
+  <div id="kolade-img1" class="lightbox">
+      <a href="#" class="close-btn">&times;</a>
+      <img src="images/kolade3.jpeg" alt="Kolade 1">
+  </div>
+  <div id="kolade-img2" class="lightbox">
+      <a href="#" class="close-btn">&times;</a>
+      <img src="images/kolade4.jpeg" alt="Kolade 2">
+  </div>
+  <div id="kolade-img3" class="lightbox">
+    <a href="#" class="close-btn">&times;</a>
+    <img src="images/kolade1.jpeg" alt="Kolade 3">
+</div>
+<div id="kolade-img4" class="lightbox">
+      <a href="#" class="close-btn">&times;</a>
+      <img src="images/kolade.jpeg" alt="Kolade 4">
+  </div>
+  <div id="kolade-img5" class="lightbox">
+      <a href="#" class="close-btn">&times;</a>
+      <img src="images/kolade2.jpeg" alt="Kolade 5">
+  </div>
+</div>
 
-        <!-- Lightbox for Kolade -->
-    <div id="img1" class="lightbox">
-        <a href="#" class="close-btn">&times;</a>
-        <img src="images/kolade3.jpeg" alt="Kolade 1">
-      </div>
-      <div id="img2" class="lightbox">
-        <a href="#" class="close-btn">&times;</a>
-        <img src="images/kolade4.jpeg" alt="Kolade 2">
-      </div>
-      <div id="img3" class="lightbox">
-        <a href="#" class="close-btn">&times;</a>
-        <img src="images/kolade1.jpeg" alt="Kolade 3">
-      </div>
-      <div id="img4" class="lightbox">
-        <a href="#" class="close-btn">&times;</a>
-        <img src="images/kolade.jpeg" alt="Kolade 4">
-      </div>
-      <div id="img5" class="lightbox">
-        <a href="#" class="close-btn">&times;</a>
-        <img src="images/kolade2.jpeg" alt="Kolade 5">
-      </div>
+<!-- Section for Tobe -->
+<div class="section">
+  <h2>Tobe</h2>
+  <div class="gallery">
+      <a href="#tobe-img1"><img src="images/tobe.jpeg" alt="Tobe 1"></a>
+      <a href="#tobe-img2"><img src="images/tobe1.jpeg" alt="Tobe 2"></a>
+      <a href="#tobe-img3"><img src="images/tobe3.jpeg" alt="Tobe 3"></a>
+      <a href="#tobe-img4"><img src="images/tobe4.jpeg" alt="Tobe 4"></a>
+  </div>
 
-        <!-- Section for Carlow -->
-    <div class="section">
-        <h2>Carlow</h2>
-        <div class="gallery">
-          <img src="https://via.placeholder.com/200x150?text=Carlow+1" alt="Carlow 1">
-          <img src="https://via.placeholder.com/200x150?text=Carlow+2" alt="Carlow 2">
-          <img src="https://via.placeholder.com/200x150?text=Carlow+3" alt="Carlow 3">
-          <img src="https://via.placeholder.com/200x150?text=Carlow+4" alt="Carlow 4">
-          <img src="https://via.placeholder.com/200x150?text=Carlow+5" alt="Carlow 5">
-        </div>
-      </div>
+  <!-- Lightbox for Tobe -->
+  <div id="tobe-img1" class="lightbox">
+      <a href="#" class="close-btn">&times;</a>
+      <img src="images/tobe.jpeg" alt="Tobe 1">
+  </div>
+  <div id="tobe-img2" class="lightbox">
+      <a href="#" class="close-btn">&times;</a>
+      <img src="images/tobe1.jpeg" alt="Tobe 2">
+  </div>
+  <div id="tobe-img3" class="lightbox">
+    <a href="#" class="close-btn">&times;</a>
+    <img src="images/tobe3.jpeg" alt="Tobe 3">
+</div>
+<div id="tobe-img4" class="lightbox">
+    <a href="#" class="close-btn">&times;</a>
+    <img src="images/tobe4.jpeg" alt="Tobe 4">
+</div>
   
-      <!-- Section for Obi -->
-      <div class="section">
-        <h2>Obi</h2>
-        <div class="gallery">
-          <img src="https://via.placeholder.com/200x150?text=Obi+1" alt="Obi 1">
-          <img src="https://via.placeholder.com/200x150?text=Obi+2" alt="Obi 2">
-          <img src="https://via.placeholder.com/200x150?text=Obi+3" alt="Obi 3">
-          <img src="https://via.placeholder.com/200x150?text=Obi+4" alt="Obi 4">
-          <img src="https://via.placeholder.com/200x150?text=Obi+5" alt="Obi 5">
-        </div>
-      </div>
-  
-      <!-- Section for Clinton -->
-      <div class="section">
-        <h2>Clinton</h2>
-        <div class="gallery">
-          <img src="https://via.placeholder.com/200x150?text=Clinton+1" alt="Clinton 1">
-          <img src="https://via.placeholder.com/200x150?text=Clinton+2" alt="Clinton 2">
-          <img src="https://via.placeholder.com/200x150?text=Clinton+3" alt="Clinton 3">
-          <img src="https://via.placeholder.com/200x150?text=Clinton+4" alt="Clinton 4">
-          <img src="https://via.placeholder.com/200x150?text=Clinton+5" alt="Clinton 5">
-        </div>
-      </div>
-    </div>  
-    </div>
+</div>
+    
 
     <!-- Videos Section -->
     <div class="gallery-section" id="videos">
