index.html, services.html, gallery.html, stles.css, script.js

--- a/index.html
+++ b/index.html
@@ -6,11 +6,7 @@
     <title>Home</title>
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
-<body>
-
-    <header>
-        
-      </header>   
+<body> 
 
       <!-- Header with Company Name -->
     <header>
@@ -61,9 +57,9 @@
         <li><a href="index.html">Home</a></li>
         <li><a href="contact-us.html">Contact Us</a></li>
         <li><a href="gallery.html">Gallery</a></li>
-        <li><a href="testimonies.html">Testimony</a></li>
+        <li><a href="services.html">Testimony</a></li>
     </ul>
-    <p>&copy; 2024 Your Company. All Rights Reserved.</p>
+    <p>&copy; 2025 Your Company. All Rights Reserved.</p>
 </footer>
 
 <script src="script.js"></script>    
