--- a/gallery.html
+++ b/gallery.html
@@ -8,7 +8,15 @@
 </head>
 <body>
 
+    <!-- Header with Company Name -->
+    <header>
+      <h1 class="company-name">My Company Name</h1>
+  </header>
+
 <section>
+  <div class="contact-info">
+    <p>📞 Call us: (+353) 089-2616760</p>
+  </div>
     <nav>
         <ul>
             <li><a class="navigation" href="index.html">Home</a></li>
@@ -16,78 +24,114 @@
             <li><a class="navigation" href="contact-us.html">Contact Us</a></li>
             <li><a class="navigation" href="gallery.html">Gallery</a></li>
         </ul>
+        <div class="search-container">
+          <input type="text" id="search-bar" placeholder="Search...">
+          <button type="submit">Search</button>
+      </div>
     </nav>
 </section>
 
 <!-- Gallery Section -->
+<div class="gallery-section" id="Pictures">
+  <h2>Pictures</h2>
 <!-- Section for Kolade -->
 <div class="container">
-  <h2>Kolade</h2>
+  <h3>Kolade</h3>
   <div class="gallery">
-      <a href="#kolade-img1"><img src="images/kolade3.jpeg" alt="Kolade 1"></a>
-      <a href="#kolade-img2"><img src="images/kolade4.jpeg" alt="Kolade 2"></a>
-      <a href="#kolade-img3"><img src="images/kolade1.jpeg" alt="Kolade 3"></a>
-      <a href="#kolade-img4"><img src="images/kolade.jpeg" alt="Kolade 4"></a>
-      <a href="#kolade-img5"><img src="images/kolade2.jpeg" alt="Kolade 5"></a>
+    <img src="images/kolade3.jpeg" alt="Kolade 1" onclick="openModal('images/Kolade3.jpeg')">
+    <img src="images/kolade4.jpeg" alt="Kolade 2" onclick="openModal('images/kolade4.jpeg')">
+    <img src="images/kolade1.jpeg" alt="Kolade 3" onclick="openModal('images/kolade1.jpeg')">
+    <img src="images/kolade.jpeg" alt="Kolade 4" onclick="openModal('images/Kolade.jpeg')">
+    <img src="images/kolade2.jpeg" alt="Kolade 5" onclick="openModal('images/Kolade2.jpeg')">
   </div>
 
-  <!-- Lightbox for Kolade -->
-  <div id="kolade-img1" class="lightbox">
-      <a href="#" class="close-btn">&times;</a>
-      <img src="images/kolade3.jpeg" alt="Kolade 1">
-  </div>
-  <div id="kolade-img2" class="lightbox">
-      <a href="#" class="close-btn">&times;</a>
-      <img src="images/kolade4.jpeg" alt="Kolade 2">
-  </div>
-  <div id="kolade-img3" class="lightbox">
-    <a href="#" class="close-btn">&times;</a>
-    <img src="images/kolade1.jpeg" alt="Kolade 3">
-</div>
-<div id="kolade-img4" class="lightbox">
-      <a href="#" class="close-btn">&times;</a>
-      <img src="images/kolade.jpeg" alt="Kolade 4">
-  </div>
-  <div id="kolade-img5" class="lightbox">
-      <a href="#" class="close-btn">&times;</a>
-      <img src="images/kolade2.jpeg" alt="Kolade 5">
-  </div>
-</div>
+ 
 
 <!-- Section for Tobe -->
 <div class="section">
-  <h2>Tobe</h2>
+  <h3>Tobe</h3>
   <div class="gallery">
-      <a href="#tobe-img1"><img src="images/tobe.jpeg" alt="Tobe 1"></a>
-      <a href="#tobe-img2"><img src="images/tobe1.jpeg" alt="Tobe 2"></a>
-      <a href="#tobe-img3"><img src="images/tobe3.jpeg" alt="Tobe 3"></a>
-      <a href="#tobe-img4"><img src="images/tobe4.jpeg" alt="Tobe 4"></a>
+    <img src="images/tobe.jpeg" alt="Tobe 1" onclick="openModal('images/Tobe.jpeg')">
+    <img src="images/tobe1.jpeg" alt="Tobe 2" onclick="openModal('images/Tobe1.jpeg')">
+    <img src="images/tobe3.jpeg" alt="Carlow 3" onclick="openModal('images/Tobe3.jpeg')">
+    <img src="images/tobe4.jpeg" alt="Carlow 4" onclick="openModal('images/Tobe4.jpeg')">
   </div>
 
-  <!-- Lightbox for Tobe -->
-  <div id="tobe-img1" class="lightbox">
-      <a href="#" class="close-btn">&times;</a>
-      <img src="images/tobe.jpeg" alt="Tobe 1">
+
+<!-- Section for Carlow -->
+<div class="section">
+  <h3>Carlow</h3>
+  <div class="gallery">
+    <img src="images/carlow.jpeg" alt="Carlow 1" onclick="openModal('images/Carlow.jpeg')">
+    <img src="images/carlow1.jpeg" alt="Carlow 2" onclick="openModal('images/Carlow1.jpeg')">
+    <img src="images/carlow2.jpeg" alt="Carlow 3" onclick="openModal('images/Carlow2.jpeg')">
+    <img src="images/carlow3.jpeg" alt="Carlow 4" onclick="openModal('images/Carlow3.jpeg')">
+    <img src="images/carlow4.jpeg" alt="Carlow 5" onclick="openModal('images/Carlow4.jpeg')">
+    <img src="images/carlow5.jpeg" alt="Carlow 6" onclick="openModal('images/Carlow5.jpeg')">
+    <img src="images/carlow7.jpeg" alt="Carlow 7" onclick="openModal('images/Carlow7.jpeg')">
+    <img src="images/carlow9.jpeg" alt="Carlow 8" onclick="openModal('images/Carlow9.jpeg')">
+    <img src="images/carlow10.jpeg" alt="Carlow 9" onclick="openModal('images/Carlow10.jpeg')">
   </div>
-  <div id="tobe-img2" class="lightbox">
-      <a href="#" class="close-btn">&times;</a>
-      <img src="images/tobe1.jpeg" alt="Tobe 2">
+
+
+<!-- Section for emma -->
+<div class="section">
+  <h3>Emma</h3>
+  <div class="gallery">
+    <img src="images/emma.jpeg" alt="Emma 1" onclick="openModal('images/Emma.jpeg')">
+    <img src="images/emma2.jpeg" alt="Emma 2" onclick="openModal('images/Emma2.jpeg')">
+    <img src="images/emma5.jpeg" alt="Emma 3" onclick="openModal('images/Emma5.jpeg')">
+    <img src="images/emma6.jpeg" alt="Emma 4" onclick="openModal('images/Emma6.jpeg')">
+    <img src="images/emma8.jpeg" alt="Emma 5" onclick="openModal('images/Emma8.jpeg')">
+    <img src="images/emma9.jpeg" alt="Emma 6" onclick="openModal('images/Emma9.jpeg')">
+    <img src="images/emma10.jpeg" alt="Emma 7" onclick="openModal('images/Emma10.jpeg')">
+    <img src="images/emma13.jpeg" alt="Emma 8" onclick="openModal('images/Emma13.jpeg')">
+      <img src="images/emma14.jpeg" alt="Emma 9" onclick="openModal('images/Emma14.jpeg')">
+      <img src="images/emma17.jpeg" alt="Emma10" onclick="openModal('images/Emma17.jpeg')">
   </div>
-  <div id="tobe-img3" class="lightbox">
-    <a href="#" class="close-btn">&times;</a>
-    <img src="images/tobe3.jpeg" alt="Tobe 3">
 </div>
-<div id="tobe-img4" class="lightbox">
-    <a href="#" class="close-btn">&times;</a>
-    <img src="images/tobe4.jpeg" alt="Tobe 4">
+
+<!-- Section for Bed -->
+<div class="section">
+  <h3>Bedroom</h3>
+<div class="gallery">
+  <img src="images/polo.jpeg" alt="Polo 1" onclick="openModal('images/Polo.jpeg')">
+  <img src="images/polo1.jpeg" alt="Polo 2" onclick="openModal('images/Polo 1.jpeg')">
+  <img src="images/polo2.jpeg" alt="Polo 3" onclick="openModal('images/Polo 2.jpeg')">
+  <img src="images/bed.jpeg" alt="Bed 1" onclick="openModal('images/Bed.jpeg')">
+  <img src="images/bed1.jpeg" alt="Bed 2" onclick="openModal('images/Bed1.jpeg')">
+  <img src="images/bed2.jpeg" alt="Bed 3" onclick="openModal('images/Bed2.jpeg')">
+  <img src="images/bed3.jpeg" alt="Bed 4" onclick="openModal('images/Bed3.jpeg')">
+  <img src="images/bed4.jpeg" alt="Bed 5" onclick="openModal('images/Bed4.jpeg')">
+  <img src="images/bed5.jpeg" alt="Bed 6" onclick="openModal('images/Bed5.jpeg')">
+  <img src="images/bed6.jpeg" alt="Bed 7" onclick="openModal('images/Bed6.jpeg')">
+  <img src="images/bed7.jpeg" alt="Bed 8" onclick="openModal('images/Bed7.jpeg')">
+  <img src="images/bed8.jpeg" alt="Bed 9" onclick="openModal('images/Bed8.jpeg')">
+  <img src="images/bed9.jpeg" alt="Bed 10" onclick="openModal('images/Bed9.jpeg')">
 </div>
-  
+
+<!-- Section for Bed -->
+<div class="section">
+  <h3>Jordan</h3>
+<div class="gallery">
+  <img src="images/jordan2.jpeg" alt="Jordan 1" onclick="openModal('images/Jordan2.jpeg')">
+  <img src="images/jordan4.jpeg" alt="Jordan 2" onclick="openModal('images/Jordan4.jpeg')">
+  <img src="images/jordan.jpeg" alt="Jordan 3" onclick="openModal('images/Jordan.jpeg')">
+  <img src="images/jordan1.jpeg" alt="Jordan 4" onclick="openModal('images/Jordan1.jpeg')">
+</div>
+
+ <!-- Modal -->
+ <div id="imageModal" class="modal" onclick="closeModal()">
+  <span class="close">&times;</span>
+  <img id="modalImage" class="modal-content">
+</div>
+</div>
 </div>
     
 
     <!-- Videos Section -->
     <div class="gallery-section" id="videos">
-        <h3>Videos</h3>
+        <h2>Videos</h2>
         <div class="gallery-grid">
             <video class="gallery-item" data-type="video">
                 <source src="videos/video1.mp4" type="video/mp4">
