--- a/gallery.html
+++ b/gallery.html
@@ -33,7 +33,7 @@
 
 <!-- Gallery Section -->
 <div class="gallery-section" id="Pictures">
-  <h2>Pictures</h2>
+  <h2>Gallery</h2>
 <!-- Section for Kolade -->
 <div class="container">
   <h3>Kolade</h3>
@@ -110,7 +110,7 @@
   <img src="images/bed9.jpeg" alt="Bed 10" onclick="openModal('images/Bed9.jpeg')">
 </div>
 
-<!-- Section for Bed -->
+<!-- Section for Jordan -->
 <div class="section">
   <h3>Jordan</h3>
 <div class="gallery">
@@ -150,6 +150,18 @@
     <span id="close-lightbox">&times;</span>
     <div id="lightbox-content"></div>
 </div>
+
+
+<!-- Footer with menu -->
+<footer>
+  <ul class="footer-menu">
+      <li><a href="index.html">Home</a></li>
+      <li><a href="contact-us.html">Contact Us</a></li>
+      <li><a href="gallery.html">Gallery</a></li>
+      <li><a href="services.html">Testimony</a></li>
+  </ul>
+  <p>&copy; 2025 Your Company. All Rights Reserved.</p>
+</footer>
 
 <script src="script.js"></script>
 </body>
