--- a/gallery.html
+++ b/gallery.html
@@ -38,11 +38,11 @@
 <div class="container">
   <h3>Kolade</h3>
   <div class="gallery">
-    <img src="images/kolade3.jpeg" alt="Kolade 1" onclick="openModal('images/Kolade3.jpeg')">
+    <img src="images/kolade3.jpeg" alt="Kolade 1" onclick="openModal('images/kolade3.jpeg')">
     <img src="images/kolade4.jpeg" alt="Kolade 2" onclick="openModal('images/kolade4.jpeg')">
     <img src="images/kolade1.jpeg" alt="Kolade 3" onclick="openModal('images/kolade1.jpeg')">
-    <img src="images/kolade.jpeg" alt="Kolade 4" onclick="openModal('images/Kolade.jpeg')">
-    <img src="images/kolade2.jpeg" alt="Kolade 5" onclick="openModal('images/Kolade2.jpeg')">
+    <img src="images/kolade.jpeg" alt="Kolade 4" onclick="openModal('images/kolade.jpeg')">
+    <img src="images/kolade2.jpeg" alt="Kolade 5" onclick="openModal('images/kolade2.jpeg')">
   </div>
 </div>
 
