--- a/gallery.html
+++ b/gallery.html
@@ -51,10 +51,10 @@
 <div class="section">
   <h3>Tobe</h3>
   <div class="gallery">
-    <img src="images/tobe.jpeg" alt="Tobe 1" onclick="openModal('images/Tobe.jpeg')">
-    <img src="images/tobe1.jpeg" alt="Tobe 2" onclick="openModal('images/Tobe1.jpeg')">
-    <img src="images/tobe3.jpeg" alt="Carlow 3" onclick="openModal('images/Tobe3.jpeg')">
-    <img src="images/tobe4.jpeg" alt="Carlow 4" onclick="openModal('images/Tobe4.jpeg')">
+    <img src="images/tobe.jpeg" alt="Tobe 1" onclick="openModal('images/tobe.jpeg')">
+    <img src="images/tobe1.jpeg" alt="Tobe 2" onclick="openModal('images/tobe1.jpeg')">
+    <img src="images/tobe3.jpeg" alt="Carlow 3" onclick="openModal('images/tobe3.jpeg')">
+    <img src="images/tobe4.jpeg" alt="Carlow 4" onclick="openModal('images/tobe4.jpeg')">
   </div>
 </div>
 
