--- a/gallery.html
+++ b/gallery.html
@@ -34,6 +34,7 @@
 <!-- Gallery Section -->
 <div class="gallery-section" id="Pictures">
   <h2>Gallery</h2>
+
 <!-- Section for Kolade -->
 <div class="container">
   <h3>Kolade</h3>
@@ -63,15 +64,15 @@
 <div class="section">
   <h3>Carlow</h3>
   <div class="gallery">
-    <img src="images/carlow.jpeg" alt="Carlow 1" onclick="openModal('images/Carlow.jpeg')">
-    <img src="images/carlow1.jpeg" alt="Carlow 2" onclick="openModal('images/Carlow1.jpeg')">
-    <img src="images/carlow2.jpeg" alt="Carlow 3" onclick="openModal('images/Carlow2.jpeg')">
-    <img src="images/carlow3.jpeg" alt="Carlow 4" onclick="openModal('images/Carlow3.jpeg')">
-    <img src="images/carlow4.jpeg" alt="Carlow 5" onclick="openModal('images/Carlow4.jpeg')">
-    <img src="images/carlow5.jpeg" alt="Carlow 6" onclick="openModal('images/Carlow5.jpeg')">
-    <img src="images/carlow7.jpeg" alt="Carlow 7" onclick="openModal('images/Carlow7.jpeg')">
+    <img src="images/carlow.jpeg" alt="Carlow 1" onclick="openModal('images/carlow.jpeg')">
+    <img src="images/carlow1.jpeg" alt="Carlow 2" onclick="openModal('images/carlow1.jpeg')">
+    <img src="images/carlow2.jpeg" alt="Carlow 3" onclick="openModal('images/carlow2.jpeg')">
+    <img src="images/carlow3.jpeg" alt="Carlow 4" onclick="openModal('images/carlow3.jpeg')">
+    <img src="images/carlow4.jpeg" alt="Carlow 5" onclick="openModal('images/carlow4.jpeg')">
+    <img src="images/carlow5.jpeg" alt="Carlow 6" onclick="openModal('images/carlow5.jpeg')">
+    <img src="images/carlow7.jpeg" alt="Carlow 7" onclick="openModal('images/carlow7.jpeg')">
     <img src="images/carlow9.jpeg" alt="Carlow 8" onclick="openModal('images/Carlow9.jpeg')">
-    <img src="images/carlow10.jpeg" alt="Carlow 9" onclick="openModal('images/Carlow10.jpeg')">
+    <img src="images/carlow10.jpeg" alt="Carlow 9" onclick="openModal('images/carlow10.jpeg')">
   </div>
 </div>
 
@@ -80,16 +81,16 @@
 <div class="section">
   <h3>Emma</h3>
   <div class="gallery">
-    <img src="images/emma.jpeg" alt="Emma 1" onclick="openModal('images/Emma.jpeg')">
-    <img src="images/emma2.jpeg" alt="Emma 2" onclick="openModal('images/Emma2.jpeg')">
-    <img src="images/emma5.jpeg" alt="Emma 3" onclick="openModal('images/Emma5.jpeg')">
-    <img src="images/emma6.jpeg" alt="Emma 4" onclick="openModal('images/Emma6.jpeg')">
-    <img src="images/emma8.jpeg" alt="Emma 5" onclick="openModal('images/Emma8.jpeg')">
-    <img src="images/emma9.jpeg" alt="Emma 6" onclick="openModal('images/Emma9.jpeg')">
-    <img src="images/emma10.jpeg" alt="Emma 7" onclick="openModal('images/Emma10.jpeg')">
-    <img src="images/emma13.jpeg" alt="Emma 8" onclick="openModal('images/Emma13.jpeg')">
-    <img src="images/emma14.jpeg" alt="Emma 9" onclick="openModal('images/Emma14.jpeg')">
-    <img src="images/emma17.jpeg" alt="Emma10" onclick="openModal('images/Emma17.jpeg')">
+    <img src="images/emma.jpeg" alt="Emma 1" onclick="openModal('images/emma.jpeg')">
+    <img src="images/emma2.jpeg" alt="Emma 2" onclick="openModal('images/emma2.jpeg')">
+    <img src="images/emma5.jpeg" alt="Emma 3" onclick="openModal('images/emma5.jpeg')">
+    <img src="images/emma6.jpeg" alt="Emma 4" onclick="openModal('images/emma6.jpeg')">
+    <img src="images/emma8.jpeg" alt="Emma 5" onclick="openModal('images/emma8.jpeg')">
+    <img src="images/emma9.jpeg" alt="Emma 6" onclick="openModal('images/emma9.jpeg')">
+    <img src="images/emma10.jpeg" alt="Emma 7" onclick="openModal('images/emma10.jpeg')">
+    <img src="images/emma13.jpeg" alt="Emma 8" onclick="openModal('images/emma13.jpeg')">
+    <img src="images/emma14.jpeg" alt="Emma 9" onclick="openModal('images/emma14.jpeg')">
+    <img src="images/emma17.jpeg" alt="Emma10" onclick="openModal('images/emma17.jpeg')">
   </div>
 </div>
 
@@ -98,19 +99,19 @@
 <div class="section">
   <h3>Bedroom</h3>
 <div class="gallery">
-  <img src="images/polo.jpeg" alt="Polo 1" onclick="openModal('images/Polo.jpeg')">
-  <img src="images/polo1.jpeg" alt="Polo 2" onclick="openModal('images/Polo 1.jpeg')">
-  <img src="images/polo2.jpeg" alt="Polo 3" onclick="openModal('images/Polo 2.jpeg')">
-  <img src="images/bed.jpeg" alt="Bed 1" onclick="openModal('images/Bed.jpeg')">
-  <img src="images/bed1.jpeg" alt="Bed 2" onclick="openModal('images/Bed1.jpeg')">
-  <img src="images/bed2.jpeg" alt="Bed 3" onclick="openModal('images/Bed2.jpeg')">
-  <img src="images/bed3.jpeg" alt="Bed 4" onclick="openModal('images/Bed3.jpeg')">
-  <img src="images/bed4.jpeg" alt="Bed 5" onclick="openModal('images/Bed4.jpeg')">
-  <img src="images/bed5.jpeg" alt="Bed 6" onclick="openModal('images/Bed5.jpeg')">
-  <img src="images/bed6.jpeg" alt="Bed 7" onclick="openModal('images/Bed6.jpeg')">
-  <img src="images/bed7.jpeg" alt="Bed 8" onclick="openModal('images/Bed7.jpeg')">
-  <img src="images/bed8.jpeg" alt="Bed 9" onclick="openModal('images/Bed8.jpeg')">
-  <img src="images/bed9.jpeg" alt="Bed 10" onclick="openModal('images/Bed9.jpeg')">
+  <img src="images/polo.jpeg" alt="Polo 1" onclick="openModal('images/polo.jpeg')">
+  <img src="images/polo1.jpeg" alt="Polo 2" onclick="openModal('images/polo 1.jpeg')">
+  <img src="images/polo2.jpeg" alt="Polo 3" onclick="openModal('images/polo 2.jpeg')">
+  <img src="images/bed.jpeg" alt="Bed 1" onclick="openModal('images/bed.jpeg')">
+  <img src="images/bed1.jpeg" alt="Bed 2" onclick="openModal('images/bed1.jpeg')">
+  <img src="images/bed2.jpeg" alt="Bed 3" onclick="openModal('images/bed2.jpeg')">
+  <img src="images/bed3.jpeg" alt="Bed 4" onclick="openModal('images/bed3.jpeg')">
+  <img src="images/bed4.jpeg" alt="Bed 5" onclick="openModal('images/bed4.jpeg')">
+  <img src="images/bed5.jpeg" alt="Bed 6" onclick="openModal('images/bed5.jpeg')">
+  <img src="images/bed6.jpeg" alt="Bed 7" onclick="openModal('images/bed6.jpeg')">
+  <img src="images/bed7.jpeg" alt="Bed 8" onclick="openModal('images/bed7.jpeg')">
+  <img src="images/bed8.jpeg" alt="Bed 9" onclick="openModal('images/bed8.jpeg')">
+  <img src="images/bed9.jpeg" alt="Bed 10" onclick="openModal('images/bed9.jpeg')">
 </div>
 </div>
 
@@ -119,10 +120,10 @@
 <div class="section">
   <h3>Jordan</h3>
 <div class="gallery">
-  <img src="images/jordan2.jpeg" alt="Jordan 1" onclick="openModal('images/Jordan2.jpeg')">
-  <img src="images/jordan4.jpeg" alt="Jordan 2" onclick="openModal('images/Jordan4.jpeg')">
-  <img src="images/jordan.jpeg" alt="Jordan 3" onclick="openModal('images/Jordan.jpeg')">
-  <img src="images/jordan1.jpeg" alt="Jordan 4" onclick="openModal('images/Jordan1.jpeg')">
+  <img src="images/jordan2.jpeg" alt="Jordan 1" onclick="openModal('images/jordan2.jpeg')">
+  <img src="images/jordan4.jpeg" alt="Jordan 2" onclick="openModal('images/jordan4.jpeg')">
+  <img src="images/jordan.jpeg" alt="Jordan 3" onclick="openModal('images/jordan.jpeg')">
+  <img src="images/jordan1.jpeg" alt="Jordan 4" onclick="openModal('images/jordan1.jpeg')">
 </div>
 </div>
 
