--- a/index.html
+++ b/index.html
@@ -17,17 +17,27 @@
     <div class="contact-info">
         <p>📞 Call us: (+353) 089-2616760</p>
       </div>
-    <nav>
+     <!--Navigation section-->
+     <nav>
         <ul>
-            <li><a class="navigation" href="index.html">Home</a></li>
-            <li><a class="navigation" href="services.html">Services</a></li>
-            <li><a class="navigation" href="contact-us.html">Contact Us</a></li>
-            <li><a class="navigation" href="gallery.html">Gallery</a></li>
+          <li><a class="navigation" href="index.html">Home</a></li>
+          <li class="dropdown">
+            <a class="navigation" href="services.html">Services</a>
+            <ul class="dropdown-menu">
+              <li><a href="mediawall.html">Media Wall</a></li>
+              <li><a href="ceilling.html">Ceilling Design & Dropdown</a></li>
+              <li><a href="wallpanels.html">Wall Panneling</a></li>
+              <li><a href="tiling.html">Tiling</a></li>
+              <li><a href="woodenfloor.html">Wooden Floor</a></li>
+            </ul>
+          </li>
+          <li><a class="navigation" href="contact-us.html">Contact Us</a></li>
+          <li><a class="navigation" href="gallery.html">Gallery</a></li>      
         </ul>
         <div class="search-container">
-            <input type="text" id="search-bar" placeholder="Search...">
-            <button type="submit">Search</button>
-        </div>
+          <input type="text" id="search-bar" placeholder="Search...">
+          <button type="submit">Search</button>
+      </div>
     </nav>
 </section>
 
@@ -51,17 +61,32 @@
     </div>
 </section>
 
+<h2 id="house-painting">We also do house painting</h2>
+
+
 <!-- Footer with menu -->
 <footer>
-    <ul class="footer-menu">
-        <li><a href="index.html">Home</a></li>
+    <section>
+      <ul class="footer-menu">
+        <li><a class="navigation" href="index.html">Home</a></li>
+        <li class="dropup">
+          <a class="navigation" href="services.html">Services</a>
+          <ul class="dropup-menu">
+            <li><a href="mediawall.html">Media Wall</a></li>
+            <li><a href="ceiling.html">Ceiling Design & Dropdown</a></li>
+            <li><a href="wallpanels.html">Wall Paneling</a></li>
+            <li><a href="tiling.html">Tiling</a></li>
+            <li><a href="woodenfloor.html">Wooden Floor</a></li>
+          </ul>
+        </li>
         <li><a href="contact-us.html">Contact Us</a></li>
         <li><a href="gallery.html">Gallery</a></li>
-        <li><a href="services.html">Testimony</a></li>
-    </ul>
+      </ul>
+      
     <p>&copy; 2025 Your Company. All Rights Reserved.</p>
-</footer>
-
-<script src="script.js"></script>    
-</body>
-</html>
+  </section>
+  </footer>
+  
+  <script src="script.js"></script>
+  </body>
+  </html>
