--- a/gallery.html
+++ b/gallery.html
@@ -47,7 +47,7 @@
   <h2>Gallery</h2>
 
 <!-- Section for Kolade -->
-<div class="container">
+<div class="section">
   <h3>Kolade</h3>
   <div class="gallery">
     <img src="images/kolade3.jpeg" alt="Kolade 1" onclick="openModal('images/kolade3.jpeg')">
@@ -144,7 +144,6 @@
   <span class="close">&times;</span>
   <img id="modalImage" class="modal-content">
 </div>
-</div>
     
 
     <!-- Videos Section -->
@@ -188,7 +187,7 @@
       <li><a href="contact-us.html">Contact Us</a></li>
       <li><a href="gallery.html">Gallery</a></li>
     </ul>
-    
+
   <p>&copy; 2025 Your Company. All Rights Reserved.</p>
 </section>
 </footer>
