--- a/gallery.html
+++ b/gallery.html
@@ -167,6 +167,7 @@
     <span id="close-lightbox">&times;</span>
     <div id="lightbox-content"></div>
 </div>
+</div>
 
 
 <!-- Footer with menu -->
