--- a/gallery.html
+++ b/gallery.html
@@ -14,7 +14,7 @@
   </header>
 
 <section>
-  <div class="contact-info">
+  <div class="contact-info" style="background-color: #4CAF50; padding: 10px 0; text-align: center; color: white;">
     <p>📞 Call us: (+353) 089-2616760</p>
   </div>
 
@@ -44,11 +44,11 @@
 
 <!-- Gallery Section -->
 <div class="gallery-section" id="Pictures">
-  <h2>Gallery</h2>
+  <h2 id="my-gallery">Gallery</h2>
 
 <!-- Section for Kolade -->
-<div class="section">
-  <h3>Kolade</h3>
+<div class="section"> 
+  <h3 id="name">Kolade</h3>
   <div class="gallery">
     <img src="images/kolade3.jpeg" alt="Kolade 1" onclick="openModal('images/kolade3.jpeg')">
     <img src="images/kolade4.jpeg" alt="Kolade 2" onclick="openModal('images/kolade4.jpeg')">
@@ -61,7 +61,7 @@
 
 <!-- Section for Tobe -->
 <div class="section">
-  <h3>Tobe</h3>
+  <h3 id="name">Tobe</h3>
   <div class="gallery">
     <img src="images/tobe.jpeg" alt="Tobe 1" onclick="openModal('images/tobe.jpeg')">
     <img src="images/tobe1.jpeg" alt="Tobe 2" onclick="openModal('images/tobe1.jpeg')">
@@ -73,7 +73,7 @@
 
 <!-- Section for Carlow -->
 <div class="section">
-  <h3>Carlow</h3>
+  <h3 id="name">Carlow</h3>
   <div class="gallery">
     <img src="images/carlow.jpeg" alt="Carlow 1" onclick="openModal('images/carlow.jpeg')">
     <img src="images/carlow1.jpeg" alt="Carlow 2" onclick="openModal('images/carlow1.jpeg')">
@@ -90,7 +90,7 @@
 
 <!-- Section for emma -->
 <div class="section">
-  <h3>Emma</h3>
+  <h3 id="name">Emma</h3>
   <div class="gallery">
     <img src="images/emma.jpeg" alt="Emma 1" onclick="openModal('images/emma.jpeg')">
     <img src="images/emma2.jpeg" alt="Emma 2" onclick="openModal('images/emma2.jpeg')">
@@ -108,7 +108,7 @@
 
 <!-- Section for Bed -->
 <div class="section">
-  <h3>Bedroom</h3>
+  <h3 id="name">Bedroom</h3>
 <div class="gallery">
   <img src="images/polo.jpeg" alt="Polo 1" onclick="openModal('images/polo.jpeg')">
   <img src="images/polo1.jpeg" alt="Polo 2" onclick="openModal('images/polo1.jpeg')">
@@ -129,7 +129,7 @@
 
 <!-- Section for Jordan -->
 <div class="section">
-  <h3>Jordan</h3>
+  <h3 id="name">Jordan</h3>
 <div class="gallery">
   <img src="images/jordan2.jpeg" alt="Jordan 1" onclick="openModal('images/jordan2.jpeg')">
   <img src="images/jordan4.jpeg" alt="Jordan 2" onclick="openModal('images/jordan4.jpeg')">
@@ -148,7 +148,7 @@
 
     <!-- Videos Section -->
     <div class="gallery-section" id="videos">
-        <h2>Videos</h2>
+        <h2 id="my-video">Videos</h2>
         <div class="gallery-grid">
             <video class="gallery-item" data-type="video">
                 <source src="videos/video1.mp4" type="video/mp4">
@@ -169,6 +169,7 @@
 </div>
 </div>
 
+<h2 id="house-painting">We also do house painting</h2>
 
 <!-- Footer with menu -->
 <footer>
