--- a/index.html
+++ b/index.html
@@ -3,18 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
+    <meta name="description" content="Expert media wall installation, house painting, wallpaneling, tiling, and wooden flooring services for a stylish home makeover.">
+    <title>Media Wall, House Painting, Tiling, and Wooden Flooring Services</title>
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body> 
 
       <!-- Header with Company Name -->
-    <header>
+      <header>
         <h1 class="company-name">My Company Name</h1>
     </header>
     
 <section>
-    <div class="contact-info">
+    <div class="contact-info" style="background-color: #4CAF50; padding: 10px 0; text-align: center; color: white;">
         <p>📞 Call us: (+353) 089-2616760</p>
       </div>
      <!--Navigation section-->
@@ -43,7 +44,9 @@
 
 <!-- Content Section with Picture and Video -->
 <section id="content">
-    <h2>Welcome to Our Interior Design World</h2>
+    <section class="hero">
+        <h2>Welcome to Our Interior Design World</h2>
+    </section>
 
     <!-- Picture -->
     <div class="media">
@@ -63,7 +66,7 @@
 
 <h2 id="house-painting">We also do house painting</h2>
 
-
+<p>Contact us for top-quality media wall, painting, tiling, and wooden flooring services.</p>
 <!-- Footer with menu -->
 <footer>
     <section>
