--- a/gallery.html
+++ b/gallery.html
@@ -196,4 +196,236 @@
 
 <script src="script.js"></script>
 </body>
+</html><!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Gallery</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
+</head>
+<body>
+
+    <!-- Header with Company Name -->
+    <header>
+      <h1 class="company-name">My Company Name</h1>
+  </header>
+
+<section>
+  <div class="contact-info" style="background-color: #4CAF50; padding: 10px 0; text-align: center; color: white;">
+    <p>📞 Call us: (+353) 089-2616760</p>
+  </div>
+
+  <!--Navigation section-->
+    <nav>
+        <ul>
+          <li><a class="navigation" href="index.html">Home</a></li>
+          <li class="dropdown">
+            <a class="navigation" href="services.html">Services</a>
+            <ul class="dropdown-menu">
+              <li><a href="mediawall.html">Media Wall</a></li>
+              <li><a href="ceilling.html">Ceilling Design & Dropdown</a></li>
+              <li><a href="wallpanels.html">Wall Panneling</a></li>
+              <li><a href="tiling.html">Tiling</a></li>
+              <li><a href="woodenfloor.html">Wooden Floor</a></li>
+            </ul>
+          </li>
+          <li><a class="navigation" href="gallery.html">Gallery</a></li>      
+        </ul>
+    </nav>
+</section>
+
+<!-- Gallery Section -->
+<div class="gallery-section" id="Pictures">
+  <h2 id="my-gallery">Gallery</h2>
+
+<!-- Section for Kolade -->
+<div class="section"> 
+  <h3 id="name">Kolade</h3>
+  <div class="gallery">
+    <img src="images/kolade3.jpeg" alt="Kolade 1" onclick="openModal('images/kolade3.jpeg')">
+    <img src="images/kolade4.jpeg" alt="Kolade 2" onclick="openModal('images/kolade4.jpeg')">
+    <img src="images/kolade1.jpeg" alt="Kolade 3" onclick="openModal('images/kolade1.jpeg')">
+    <img src="images/kolade.jpeg" alt="Kolade 4" onclick="openModal('images/kolade.jpeg')">
+    <img src="images/kolade2.jpeg" alt="Kolade 5" onclick="openModal('images/kolade2.jpeg')">
+  </div>
+</div>
+
+
+<!-- Section for Tobe -->
+<div class="section">
+  <h3 id="name">Tobe</h3>
+  <div class="gallery">
+    <img src="images/tobe.jpeg" alt="Tobe 1" onclick="openModal('images/tobe.jpeg')">
+    <img src="images/tobe1.jpeg" alt="Tobe 2" onclick="openModal('images/tobe1.jpeg')">
+    <img src="images/tobe3.jpeg" alt="Carlow 3" onclick="openModal('images/tobe3.jpeg')">
+    <img src="images/tobe4.jpeg" alt="Carlow 4" onclick="openModal('images/tobe4.jpeg')">
+  </div>
+</div>
+
+
+<!-- Section for Carlow -->
+<div class="section">
+  <h3 id="name">Carlow</h3>
+  <div class="gallery">
+    <img src="images/carlow.jpeg" alt="Carlow 1" onclick="openModal('images/carlow.jpeg')">
+    <img src="images/carlow1.jpeg" alt="Carlow 2" onclick="openModal('images/carlow1.jpeg')">
+    <img src="images/carlow2.jpeg" alt="Carlow 3" onclick="openModal('images/carlow2.jpeg')">
+    <img src="images/carlow3.jpeg" alt="Carlow 4" onclick="openModal('images/carlow3.jpeg')">
+    <img src="images/carlow4.jpeg" alt="Carlow 5" onclick="openModal('images/carlow4.jpeg')">
+    <img src="images/carlow5.jpeg" alt="Carlow 6" onclick="openModal('images/carlow5.jpeg')">
+    <img src="images/carlow7.jpeg" alt="Carlow 7" onclick="openModal('images/carlow7.jpeg')">
+    <img src="images/carlow9.jpeg" alt="Carlow 8" onclick="openModal('images/carlow9.jpeg')">
+    <img src="images/carlow10.jpeg" alt="Carlow 9" onclick="openModal('images/carlow10.jpeg')">
+  </div>
+</div>
+
+
+<!-- Section for emma -->
+<div class="section">
+  <h3 id="name">Emma</h3>
+  <div class="gallery">
+    <img src="images/emma.jpeg" alt="Emma 1" onclick="openModal('images/emma.jpeg')">
+    <img src="images/emma2.jpeg" alt="Emma 2" onclick="openModal('images/emma2.jpeg')">
+    <img src="images/emma5.jpeg" alt="Emma 3" onclick="openModal('images/emma5.jpeg')">
+    <img src="images/emma6.jpeg" alt="Emma 4" onclick="openModal('images/emma6.jpeg')">
+    <img src="images/emma8.jpeg" alt="Emma 5" onclick="openModal('images/emma8.jpeg')">
+    <img src="images/emma9.jpeg" alt="Emma 6" onclick="openModal('images/emma9.jpeg')">
+    <img src="images/emma10.jpeg" alt="Emma 7" onclick="openModal('images/emma10.jpeg')">
+    <img src="images/emma13.jpeg" alt="Emma 8" onclick="openModal('images/emma13.jpeg')">
+    <img src="images/emma14.jpeg" alt="Emma 9" onclick="openModal('images/emma14.jpeg')">
+    <img src="images/emma17.jpeg" alt="Emma10" onclick="openModal('images/emma17.jpeg')">
+  </div>
+</div>
+
+
+<!-- Section for Bed -->
+<div class="section">
+  <h3 id="name">Bedroom</h3>
+<div class="gallery">
+  <img src="images/polo.jpeg" alt="Polo 1" onclick="openModal('images/polo.jpeg')">
+  <img src="images/polo1.jpeg" alt="Polo 2" onclick="openModal('images/polo1.jpeg')">
+  <img src="images/polo2.jpeg" alt="Polo 3" onclick="openModal('images/polo2.jpeg')">
+  <img src="images/bed.jpeg" alt="Bed 1" onclick="openModal('images/bed.jpeg')">
+  <img src="images/bed1.jpeg" alt="Bed 2" onclick="openModal('images/bed1.jpeg')">
+  <img src="images/bed2.jpeg" alt="Bed 3" onclick="openModal('images/bed2.jpeg')">
+  <img src="images/bed3.jpeg" alt="Bed 4" onclick="openModal('images/bed3.jpeg')">
+  <img src="images/bed4.jpeg" alt="Bed 5" onclick="openModal('images/bed4.jpeg')">
+  <img src="images/bed5.jpeg" alt="Bed 6" onclick="openModal('images/bed5.jpeg')">
+  <img src="images/bed6.jpeg" alt="Bed 7" onclick="openModal('images/bed6.jpeg')">
+  <img src="images/bed7.jpeg" alt="Bed 8" onclick="openModal('images/bed7.jpeg')">
+  <img src="images/bed8.jpeg" alt="Bed 9" onclick="openModal('images/bed8.jpeg')">
+  <img src="images/bed9.jpeg" alt="Bed 10" onclick="openModal('images/bed9.jpeg')">
+</div>
+</div>
+
+
+<!-- Section for Jordan -->
+<div class="section">
+  <h3 id="name">Jordan</h3>
+<div class="gallery">
+  <img src="images/jordan2.jpeg" alt="Jordan 1" onclick="openModal('images/jordan2.jpeg')">
+  <img src="images/jordan4.jpeg" alt="Jordan 2" onclick="openModal('images/jordan4.jpeg')">
+  <img src="images/jordan.jpeg" alt="Jordan 3" onclick="openModal('images/jordan.jpeg')">
+  <img src="images/jordan1.jpeg" alt="Jordan 4" onclick="openModal('images/jordan1.jpeg')">
+</div>
+</div>
+
+
+ <!-- Modal -->
+ <div id="imageModal" class="modal" onclick="closeModal()">
+  <span class="close">&times;</span>
+  <img id="modalImage" class="modal-content">
+</div>
+    
+
+    <!-- Videos Section -->
+    <div class="gallery-section" id="videos">
+      <h2 id="my-video">Videos</h2>
+      <div class="gallery-grid">
+        <div class="video-item" onclick="openVideoModal('videos/kolade.mp4')">
+          <video muted class="gallery-item" controls>
+              <source src="videos/kolade.mp4" type="video/mp4">
+              Your browser does not support the video tag.
+          </video>
+      </div>
+      <div class="video-item" onclick="openVideoModal('videos/tobe.mp4')">
+          <video muted class="gallery-item" controls>
+              <source src="videos/tobe.mp4" type="video/mp4">
+              Your browser does not support the video tag.
+          </video>
+      </div>
+      <div class="video-item" onclick="openVideoModal('videos/clint.mp4')">
+        <video muted class="gallery-item" controls>
+            <source src="videos/clint.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+        </video>
+    </div>
+    <div class="video-item" onclick="openVideoModal('videos/carlow1.mp4')">
+        <video muted class="gallery-item" controls>
+            <source src="videos/carlow1.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+        </video>
+    </div>
+    <div class="video-item" onclick="openVideoModal('videos/carlow2.mp4')">
+      <video muted class="gallery-item" controls>
+          <source src="videos/carlow2.mp4" type="video/mp4">
+          Your browser does not support the video tag.
+      </video>
+  </div>
+  <div class="video-item" onclick="openVideoModal('videos/jordanw.mp4')">
+      <video muted class="gallery-item" controls>
+          <source src="videos/jordanw.mp4" type="video/mp4">
+          Your browser does not support the video tag.
+      </video>
+  </div>
+      </div>
+  </div>
+
+  <!-- Video Modal -->
+<div id="videoModal" class="modal" onclick="closeVideoModal()">
+  <span class="close">&times;</span>
+  <video id="modalVideo" controls class="modal-content"></video>
+</div>
+  
+  <!-- Video Lightbox Modal -->
+  <div id="videoModal" class="modal">
+      <span class="close" onclick="closeVideoModal()">&times;</span>
+      <video id="modalVideo" class="modal-content" controls></video>
+  </div>
+</section>
+
+<!-- Lightbox Overlay -->
+<div id="lightbox" class="lightbox">
+    <span id="close-lightbox">&times;</span>
+    <div id="lightbox-content"></div>
+</div>
+</div>
+
+<h2 id="house-painting">We also do house painting</h2>
+
+<!-- Footer with menu -->
+<footer>
+  <section>
+    <ul class="footer-menu">
+      <li><a class="navigation" href="index.html">Home</a></li>
+      <li class="dropup">
+        <a class="navigation" href="services.html">Services</a>
+        <ul class="dropup-menu">
+          <li><a href="mediawall.html">Media Wall</a></li>
+          <li><a href="ceiling.html">Ceiling Design & Dropdown</a></li>
+          <li><a href="wallpanels.html">Wall Paneling</a></li>
+          <li><a href="tiling.html">Tiling</a></li>
+          <li><a href="woodenfloor.html">Wooden Floor</a></li>
+        </ul>
+      </li>
+      <li><a href="gallery.html">Gallery</a></li>
+    </ul>
+
+  <p>&copy; 2025 Your Company. All Rights Reserved.</p>
+</section>
+</footer>
+
+<script src="script.js"></script>
+</body>
 </html>
