--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </header>
     
 <section>
-    <div class="contact-info" style="background-color: #4CAF50; padding: 10px 0; text-align: center; color: white;">
+    <div class="contact-info" style="background-color:  blueviolet; padding: 10px 0; text-align: center; color: white;">
         <p>📞 Call us: (+353) 089-2616760</p>
       </div>
      <!--Navigation section-->
@@ -32,13 +32,8 @@
               <li><a href="woodenfloor.html">Wooden Floor</a></li>
             </ul>
           </li>
-          <li><a class="navigation" href="contact-us.html">Contact Us</a></li>
           <li><a class="navigation" href="gallery.html">Gallery</a></li>      
         </ul>
-        <div class="search-container">
-          <input type="text" id="search-bar" placeholder="Search...">
-          <button type="submit">Search</button>
-      </div>
     </nav>
 </section>
 
@@ -82,7 +77,6 @@
             <li><a href="woodenfloor.html">Wooden Floor</a></li>
           </ul>
         </li>
-        <li><a href="contact-us.html">Contact Us</a></li>
         <li><a href="gallery.html">Gallery</a></li>
       </ul>
       
