--- a/gallery.html
+++ b/gallery.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gallery</title>
+    <meta name="description" content="Expert services for media walls, tiling, wooden flooring, and painting. Transform your space with professional craftsmanship. Contact us today!">
+    <title>Professional Media Wall, Tiling, Wooden Flooring, and Painting Services</title>
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
@@ -205,6 +206,8 @@
 </div>
 
 <h2 id="house-painting">We also do house painting</h2>
+
+<p class="large-paragraph">Contact us for top-quality media wall, painting, tiling, painting and wooden flooring services.</p>
 
 <!-- Footer with menu -->
 <footer>
