--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Expert media wall installation, house painting, wallpaneling, tiling, and wooden flooring services for a stylish home makeover.">
-    <title>Media Wall, House Painting, Tiling, and Wooden Flooring Services</title>
+    <meta name="description" content="Expert services for media walls, tiling, wooden flooring, and painting. Transform your space with professional craftsmanship. Contact us today!">
+    <title>Professional Media Wall, Tiling, Wooden Flooring, and Painting Services</title>
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body> 
@@ -52,7 +52,7 @@
     <!-- Video -->
     <div class="media">
         <h3>Design Walkthrough Video</h3>
-        <video controls class="featured-video">
+        <video controls class="featured-video" muted class="gallery-item" controls>
             <source src="videos/kolade.mp4" type="video/mp4">
             Your browser does not support the video tag.
         </video>
@@ -61,7 +61,8 @@
 
 <h2 id="house-painting">We also do house painting</h2>
 
-<p>Contact us for top-quality media wall, painting, tiling, and wooden flooring services.</p>
+<p class="large-paragraph">Contact us for top-quality media wall, painting, tiling, painting and wooden flooring services.</p>
+<p>Have questions? Reach out to us for more information.</p>
 <!-- Footer with menu -->
 <footer>
     <section>
