--- a/mediawall.html
+++ b/mediawall.html
@@ -19,8 +19,8 @@
         <p>📞 Call us: (+353) 089-2616760</p>
       </div>
      <!--Navigation section-->
-     <nav>
-        <ul>
+    <!-- <nav>
+       <ul>
           <li><a class="navigation" href="index.html">Home</a></li>
           <li class="dropdown">
             <a class="navigation" href="services.html">Services</a>
