--- a/services.html
+++ b/services.html
@@ -3,17 +3,85 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gallery</title>
+    <meta name="description" content="Expert services for media walls, tiling, wooden flooring, and painting. Transform your space with professional craftsmanship. Contact us today!">
+    <title>Professional Media Wall, Tiling, Wooden Flooring, and Painting Services</title>
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
 
+    <!-- Header with Company Name -->
+    <header>
+      <h1 class="company-name">My Company Name</h1>
+  </header>
+
 <section>
+  <div class="contact-info" style="background-color: blueviolet; padding: 10px 0; text-align: center; color: white;">
+    <p>📞 Call us: (+353) 089-2616760</p>
+  </div>
+
+  <!--Navigation section-->
     <nav>
         <ul>
-            <li><a class="navigation" href="index.html">Home</a></li>
-            <li><a class="navigation" href="services.html">Services</a></li>
-            <li><a class="navigation" href="gallery.html">Gallery</a></li>
+          <li><a class="navigation" href="index.html">Home</a></li>
+          <li class="dropdown">
+            <a class="navigation" href="services.html">Services</a>
+            <ul class="dropdown-menu">
+              <li><a href="mediawall.html">Media Wall</a></li>
+              <li><a href="ceilling.html">Ceilling Design & Dropdown</a></li>
+              <li><a href="wallpanels.html">Wall Panneling</a></li>
+              <li><a href="tiling.html">Tiling</a></li>
+              <li><a href="woodenfloor.html">Wooden Floor</a></li>
+            </ul>
+          </li>
+          <li><a class="navigation" href="gallery.html">Gallery</a></li>      
         </ul>
     </nav>
+</section>
+
+ <!-- Hero Section -->
+ <section id="home" style="padding: 2rem; text-align: center;">
+    <h2>Your One-Stop Solution for Home Improvements</h2>
+    <p>Transform your space with our expert craftsmanship and innovative designs.</p>
+</section>
+
+<!-- Gallery Section -->
+<div class="gallery-section" id="Pictures">
+  <h1 id="my-gallery">Welcome to Our Home Improvement Services</h1>
+
+  <!-- Services Section -->
+<section id="services" class="services-section">
+    <h1>Our Services</h1>
+    <div class="service-item">
+        <div class="gallery">
+            <img src="images/kolade2.jpeg" alt="Kola 1" onclick="openModal('images/kolade2.jpeg')">
+            <img src="images/kolade.jpeg" alt="Kola 2" onclick="openModal('images/kolade.jpeg')">
+            <img src="images/tobe3.jpeg" alt="Tobe 3" onclick="openModal('images/tobe3.jpeg')">
+            <img src="images/tobe4.jpeg" alt="Tobe 4" onclick="openModal('images/tobe4.jpeg')">
+          </div>
+        <h2>Media Wall Design</h2>
+        <p>We create stunning media walls tailored to your style and needs.</p>
+    </div>
+
+    <div class="service-item">
+        <h2>Wall Paneling</h2>
+            <div class="gallery">
+              <img src="images/emma5.jpeg" alt="Emma 3" onclick="openModal('images/emma5.jpeg')">
+              <img src="images/emma8.jpeg" alt="Emma 5" onclick="openModal('images/emma8.jpeg')">
+              <img src="images/emma9.jpeg" alt="Emma 6" onclick="openModal('images/emma9.jpeg')">
+              <img src="images/emma14.jpeg" alt="Emma 9" onclick="openModal('images/emma14.jpeg')">
+            </div>
+        <p>Enhance your walls with our professional paneling services.</p>
+    </div>
+    <div class="service-item">
+        <h2>Tiling Services</h2>
+        <p>Get beautiful and durable tiles installed by experts.</p>
+    </div>
+    <div class="service-item">
+        <h2>Wooden Flooring</h2>
+        <p>Upgrade your floors with our elegant wooden flooring solutions.</p>
+    </div>
+    <div class="service-item">
+        <h2>Professional Painting</h2>
+        <p>Give your walls a fresh look with our top-notch painting services.</p>
+    </div>
 </section>
