--- a/gallery.html
+++ b/gallery.html
@@ -20,23 +20,29 @@
   </div>
 
   <!--Navigation section-->
-    <nav>
-        <ul>
-          <li><a class="navigation" href="index.html">Home</a></li>
-          <li class="dropdown">
-            <a class="navigation" href="services.html">Services</a>
-            <ul class="dropdown-menu">
-              <li><a href="mediawall.html">Media Wall</a></li>
-              <li><a href="ceilling.html">Ceilling Design & Dropdown</a></li>
-              <li><a href="wallpanels.html">Wall Panneling</a></li>
-              <li><a href="tiling.html">Tiling</a></li>
-              <li><a href="woodenfloor.html">Wooden Floor</a></li>
-            </ul>
-          </li>
-          <li><a class="navigation" href="gallery.html">Gallery</a></li>      
+  <nav>
+    <ul>
+      <li><a class="navigation" href="index.html">Home</a></li>
+      <li class="dropdown">
+        <a class="dropdown-togggle" href="services.html">Services</a>
+        <ul class="dropdown-menu">
+          <li><a href="services.html#mediawall">Media Wall</a></li>
+          <li><a href="services.html#ceillingdesign">Ceilling Design & Dropdown</a></li>
+          <li><a href="services.html#wallpanels">Wall Panneling</a></li>
+          <li><a href="services.html#tiling">Tiling</a></li>
+          <li><a href="services.html#woodenflooring">Wooden Flooring</a></li>
         </ul>
-    </nav>
+      </li>
+      <li><a class="navigation" href="gallery.html">Gallery</a></li>      
+    </ul>
+</nav>
 </section>
+
+<!-- Content Section with Picture and Video -->
+<section id="content">
+  <section class="hero">
+      <h2>Welcome to Our Interior Design World</h2>
+  </section>
 
 <!-- Gallery Section -->
 <div class="gallery-section" id="Pictures">
@@ -44,7 +50,7 @@
 
 <!-- Section for Kolade -->
 <div class="section"> 
-  <h3 id="name">Kolade</h3>
+  <h3 id="name">Ade</h3>
   <div class="gallery">
     <img src="images/kolade3.jpeg" alt="Kolade 1" onclick="openModal('images/kolade3.jpeg')">
     <img src="images/kolade4.jpeg" alt="Kolade 2" onclick="openModal('images/kolade4.jpeg')">
@@ -69,7 +75,7 @@
 
 <!-- Section for Carlow -->
 <div class="section">
-  <h3 id="name">Carlow</h3>
+  <h3 id="name">Carl</h3>
   <div class="gallery">
     <img src="images/carlow.jpeg" alt="Carlow 1" onclick="openModal('images/carlow.jpeg')">
     <img src="images/carlow1.jpeg" alt="Carlow 2" onclick="openModal('images/carlow1.jpeg')">
@@ -104,7 +110,7 @@
 
 <!-- Section for Bed -->
 <div class="section">
-  <h3 id="name">Bedroom</h3>
+  <h3 id="name">Room</h3>
 <div class="gallery">
   <img src="images/polo.jpeg" alt="Polo 1" onclick="openModal('images/polo.jpeg')">
   <img src="images/polo1.jpeg" alt="Polo 2" onclick="openModal('images/polo1.jpeg')">
@@ -125,7 +131,7 @@
 
 <!-- Section for Jordan -->
 <div class="section">
-  <h3 id="name">Jordan</h3>
+  <h3 id="name">Jord</h3>
 <div class="gallery">
   <img src="images/jordan2.jpeg" alt="Jordan 1" onclick="openModal('images/jordan2.jpeg')">
   <img src="images/jordan4.jpeg" alt="Jordan 2" onclick="openModal('images/jordan4.jpeg')">
@@ -208,6 +214,7 @@
 <h2 id="house-painting">We also do house painting</h2>
 
 <p class="large-paragraph">Contact us for top-quality media wall, painting, tiling, painting and wooden flooring services.</p>
+<p class="large-paragraph">Have questions? Reach out to us for more information.</p>
 
 <!-- Footer with menu -->
 <footer>
@@ -217,11 +224,11 @@
       <li class="dropup">
         <a class="navigation" href="services.html">Services</a>
         <ul class="dropup-menu">
-          <li><a href="mediawall.html">Media Wall</a></li>
-          <li><a href="ceiling.html">Ceiling Design & Dropdown</a></li>
-          <li><a href="wallpanels.html">Wall Paneling</a></li>
-          <li><a href="tiling.html">Tiling</a></li>
-          <li><a href="woodenfloor.html">Wooden Floor</a></li>
+          <li><a href="services.html#mediawall">Media Wall</a></li>
+            <li><a href="services.html#ceillingdesign">Ceilling Design & Dropdown</a></li>
+            <li><a href="services.html#wallpanels">Wall Panneling</a></li>
+            <li><a href="services.html#tiling">Tiling</a></li>
+            <li><a href="services.html#woodenflooring">Wooden Flooring</a></li>
         </ul>
       </li>
       <li><a href="gallery.html">Gallery</a></li>
