--- a/index.html
+++ b/index.html
@@ -20,21 +20,21 @@
       </div>
      <!--Navigation section-->
      <nav>
-        <ul>
-          <li><a class="navigation" href="index.html">Home</a></li>
-          <li class="dropdown">
-            <a class="navigation" href="services.html">Services</a>
-            <ul class="dropdown-menu">
-              <li><a href="mediawall.html">Media Wall</a></li>
-              <li><a href="ceilling.html">Ceilling Design & Dropdown</a></li>
-              <li><a href="wallpanels.html">Wall Panneling</a></li>
-              <li><a href="tiling.html">Tiling</a></li>
-              <li><a href="woodenfloor.html">Wooden Floor</a></li>
-            </ul>
-          </li>
-          <li><a class="navigation" href="gallery.html">Gallery</a></li>      
-        </ul>
-    </nav>
+      <ul>
+        <li><a class="navigation" href="index.html">Home</a></li>
+        <li class="dropdown">
+          <a class="dropdown-togggle" href="services.html">Services</a>
+          <ul class="dropdown-menu">
+            <li><a href="services.html#mediawall">Media Wall</a></li>
+            <li><a href="services.html#ceillingdesign">Ceilling Design & Dropdown</a></li>
+            <li><a href="services.html#wallpanels">Wall Panneling</a></li>
+            <li><a href="services.html#tiling">Tiling</a></li>
+            <li><a href="services.html#woodenflooring">Wooden Flooring</a></li>
+          </ul>
+        </li>
+        <li><a class="navigation" href="gallery.html">Gallery</a></li>      
+      </ul>
+  </nav>
 </section>
 
 <!-- Content Section with Picture and Video -->
@@ -62,7 +62,7 @@
 <h2 id="house-painting">We also do house painting</h2>
 
 <p class="large-paragraph">Contact us for top-quality media wall, painting, tiling, painting and wooden flooring services.</p>
-<p>Have questions? Reach out to us for more information.</p>
+<p class="large-paragraph">Have questions? Reach out to us for more information.</p>
 <!-- Footer with menu -->
 <footer>
     <section>
@@ -71,11 +71,11 @@
         <li class="dropup">
           <a class="navigation" href="services.html">Services</a>
           <ul class="dropup-menu">
-            <li><a href="mediawall.html">Media Wall</a></li>
-            <li><a href="ceiling.html">Ceiling Design & Dropdown</a></li>
-            <li><a href="wallpanels.html">Wall Paneling</a></li>
-            <li><a href="tiling.html">Tiling</a></li>
-            <li><a href="woodenfloor.html">Wooden Floor</a></li>
+            <li><a href="services.html#mediawall">Media Wall</a></li>
+            <li><a href="services.html#ceillingdesign">Ceilling Design & Dropdown</a></li>
+            <li><a href="services.html#wallpanels">Wall Panneling</a></li>
+            <li><a href="services.html#tiling">Tiling</a></li>
+            <li><a href="services.html#woodenflooring">Wooden Flooring</a></li>
           </ul>
         </li>
         <li><a href="gallery.html">Gallery</a></li>
