--- a/gallery.html
+++ b/gallery.html
@@ -63,7 +63,7 @@
 
 <!-- Section for Tobe -->
 <div class="section">
-  <h3 id="name">Tobe</h3>
+  <h3 id="name">Obe</h3>
   <div class="gallery">
     <img src="images/tobe.jpeg" alt="Tobe 1" onclick="openModal('images/tobe.jpeg')">
     <img src="images/tobe1.jpeg" alt="Tobe 2" onclick="openModal('images/tobe1.jpeg')">
@@ -234,7 +234,7 @@
       <li><a href="gallery.html">Gallery</a></li>
     </ul>
 
-  <p>&copy; 2025 Your Company. All Rights Reserved.</p>
+  <p>&copy; 2025 My Company. All Rights Reserved.</p>
 </section>
 </footer>
 
