--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         <li><a href="gallery.html">Gallery</a></li>
       </ul>
       
-    <p>&copy; 2025 Your Company. All Rights Reserved.</p>
+    <p>&copy; 2025 My Company. All Rights Reserved.</p>
   </section>
   </footer>
   
