--- a/services.html
+++ b/services.html
@@ -41,7 +41,7 @@
  <!-- Hero Section -->
  <section id="home" style="padding: 2rem; text-align: center;">
     <h2>Your One-Stop Solution for Home Improvements</h2>
-    <p>Transform your space with our expert craftsmanship and innovative designs.</p>
+    <p class="large-paragraph">Transform your space with our expert craftsmanship and innovative designs.</p>
 </section>
 
 <!-- Gallery Section -->
@@ -57,10 +57,11 @@
             <img src="images/kolade2.jpeg" alt="Kola 1" onclick="openModal('images/kolade2.jpeg')">
             <img src="images/kolade.jpeg" alt="Kola 2" onclick="openModal('images/kolade.jpeg')">
             <img src="images/tobe3.jpeg" alt="Tobe 3" onclick="openModal('images/tobe3.jpeg')">
-            <img src="images/tobe4.jpeg" alt="Tobe 4" onclick="openModal('images/tobe4.jpeg')">
+            <img src="images/clint4.jpeg" alt="clint 4" onclick="openModal('images/clint4.jpeg')">
           </div>
         <h2>Media Wall Design</h2>
         <p>We create stunning media walls tailored to your style and needs.</p>
+        <p>For more pictures and videos go to us Gallery page</picture></p>
     </div>
   </section>
 
@@ -68,12 +69,13 @@
     <div class="service-item">
         <h2>Wall Paneling</h2>
             <div class="gallery">
-              <img src="images/emma5.jpeg" alt="Emma 3" onclick="openModal('images/emma5.jpeg')">
-              <img src="images/emma8.jpeg" alt="Emma 5" onclick="openModal('images/emma8.jpeg')">
-              <img src="images/emma9.jpeg" alt="Emma 6" onclick="openModal('images/emma9.jpeg')">
-              <img src="images/emma14.jpeg" alt="Emma 9" onclick="openModal('images/emma14.jpeg')">
+              <img src="images/emma5.jpeg" alt="Emma 1" onclick="openModal('images/emma5.jpeg')">
+              <img src="images/emma8.jpeg" alt="Emma 2" onclick="openModal('images/emma8.jpeg')">
+              <img src="images/emma9.jpeg" alt="Emma 3" onclick="openModal('images/emma9.jpeg')">
+              <img src="images/emma14.jpeg" alt="Emma 4" onclick="openModal('images/emma14.jpeg')">
             </div>
         <p>Enhance your walls with our professional paneling services.</p>
+        <p>For more pictures and videos go to us Gallery page</picture></p>
     </div>
   </section>
 
@@ -81,25 +83,36 @@
     <div class="service-item">
         <h2>Ceilling Design & Dropdown</h2>
         <div class="gallery">
-          <img src="images/carlow5.jpeg" alt="Emma 3" onclick="openModal('images/carlow5.jpeg')">
-          <img src="images/perl1.jpeg" alt="Emma 5" onclick="openModal('images/perl1.jpeg')">
-          <img src="images/obi3.jpeg" alt="Emma 6" onclick="openModal('images/obi3.jpeg')">
+          <img src="images/carlow5.jpeg" alt="Carlow 1" onclick="openModal('images/carlow5.jpeg')">
+          <img src="images/perl1.jpeg" alt="perl 2" onclick="openModal('images/perl1.jpeg')">
+          <img src="images/obi3.jpeg" alt="obi 3" onclick="openModal('images/obi3.jpeg')">
         </div>
-        <p>Get beautiful and durable tiles installed by experts.</p>
+        <p>Get  a beautiful and well made ceilling design by experts.</p>
+        <p>For more pictures and videos go to us Gallery page</picture></p>
     </div>
   </section>
 
   <section id="tiling" class="services-section">
     <div class="service-item">
         <h2>Tiling Services</h2>
+        <div class="gallery">
+          <img src="images/carlow9.jpeg" alt="Carlow 1" onclick="openModal('images/carlow9.jpeg')">
+        </div>
         <p>Get beautiful and durable tiles installed by experts.</p>
+        <p>For more pictures and videos go to us Gallery page</picture></p>
     </div>
   </section>
 
     <section id="woodenflooring" class="services-section">
     <div class="service-item">
         <h2>Wooden Flooring</h2>
+        <div class="gallery">
+          <img src="images/jordan2.jpeg" alt="jordan 1" onclick="openModal('images/jordan2.jpeg')">
+          <img src="images/jordan4.jpeg" alt="jordan 2" onclick="openModal('images/jordan4.jpeg')">
+          <img src="images/perl10.jpeg" alt="perl 3" onclick="openModal('images/perl10.jpeg')">
+        </div>
         <p>Upgrade your floors with our elegant wooden flooring solutions.</p>
+        <p>For more pictures and videos go to us Gallery page</picture></p>
     </div>
   </section>
 </section>
@@ -138,7 +151,7 @@
         <li><a href="gallery.html">Gallery</a></li>
       </ul>
       
-    <p>&copy; 2025 Your Company. All Rights Reserved.</p>
+    <p>&copy; 2025 My Company. All Rights Reserved.</p>
   </section>
   </footer>
   
