--- a/services.html
+++ b/services.html
@@ -26,6 +26,7 @@
       <li class="dropdown">
         <a class="dropdown-togggle" href="services.html">Services</a>
         <ul class="dropdown-menu">
+          <!--Links to all services on the service page-->
           <li><a href="services.html#mediawall">Media Wall</a></li>
           <li><a href="services.html#ceillingdesign">Ceilling Design & Dropdown</a></li>
           <li><a href="services.html#wallpanels">Wall Panneling</a></li>
@@ -33,7 +34,7 @@
           <li><a href="services.html#woodenflooring">Wooden Flooring</a></li>
         </ul>
       </li>
-      <li><a class="navigation" href="gallery.html">Gallery</a></li>      
+      <li><a class="navigation" href="gallery.html">Gallery</a></li> <!-- LInk to the galley page-->     
     </ul>
 </nav>
 </section>
@@ -137,25 +138,26 @@
 <footer>
     <section>
       <ul class="footer-menu">
-        <li><a class="navigation" href="index.html">Home</a></li>
+        <li><a class="navigation" href="index.html">Home</a></li> <!-- LInk to the home page-->
         <li class="dropup">
-          <a class="navigation" href="services.html">Services</a>
+          <a class="navigation" href="services.html">Services</a> <!-- LInk to the service page-->
           <ul class="dropup-menu">
-            <li><a href="services.html#mediawall">Media Wall</a></li>
+            <!--Links to all services on the service page-->
+            <li><a href="services.html#mediawall">Media Wall</a></li> 
             <li><a href="services.html#ceillingdesign">Ceilling Design & Dropdown</a></li>
             <li><a href="services.html#wallpanels">Wall Panneling</a></li>
             <li><a href="services.html#tiling">Tiling</a></li>
             <li><a href="services.html#woodenflooring">Wooden Flooring</a></li>
           </ul>
         </li>
-        <li><a href="gallery.html">Gallery</a></li>
+        <li><a href="gallery.html">Gallery</a></li> <!-- LInk to the galley page-->
       </ul>
       
     <p>&copy; 2025 My Company. All Rights Reserved.</p>
   </section>
   </footer>
   
-  <script src="script.js"></script>
+  <script src="script.js"></script> <!--Link to the java script-->
   </body>
   </html>
 
